# vlm-bench

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
configs/: config.yaml
configs/eval/: smoke.yaml
configs/model/: base.yaml
docs/: community-w4a16-analysis.md  stage1_plan.md
docs/superpowers/plans/: 2026-05-13-quantize-cyankiwi.md
docs/superpowers/specs/: 2026-05-13-quantize-cyankiwi-design.md
scripts/: quantize_cyankiwi.py  quantize_dynamic_fp8.py  quantize_fp8.py  quantize_gptq.py  quantize_w4a16.py  spike_cyankiwi_w4a16.py  spike_cyankiwi_w4a16_awq.py  spike_vishva007_w4a16_gptq.py  vllm_spike.py
src/llm_bench_cc/: cli.py  composite.py  metrics.py  models.py  runner.py  tracking.py
src/llm_bench_cc/backends/: __init__.py  base.py  hf.py  vllm.py
src/llm_bench_cc/configs/: config.yaml
src/llm_bench_cc/configs/eval/: full.yaml  smoke.yaml  standard.yaml
src/llm_bench_cc/configs/model/: base.yaml  bnb-int8.yaml  bnb-nf4-vllm.yaml  bnb-nf4.yaml  fp8-block.yaml  fp8-w8a8-vllm.yaml  gptq-w4a16.yaml  w4a16-vllm-gptq.yaml  w4a16-vllm.yaml  w4a16.yaml
src/llm_bench_cc/tasks/: base.py  caption.py  chart.py  docvqa.py  ocr.py  registry.py  vqa.py
tests/: test_metrics.py  test_quantize_cyankiwi.py  test_quantize_w4a16.py
