[project]
name = "llm-bench-cc"
version = "0.1.0"
description = "Optimization pipeline for google/gemma-4-E4B-it (image-to-text)"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "torch>=2.4",
# specific transformers version required for llmcompressor
    "transformers>=4.56.1,<=4.57.6",
    "accelerate>=0.34",
    "Pillow>=10",
    "datasets>=3.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.18",
    "codecarbon>=2.7",
    "rapidfuzz>=3.9",
    "jiwer>=3.0",
    "nltk>=3.9",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Stage 1 Tier A: bitsandbytes int8 / nf4 (runtime-only, no calibration).
# Stage 1 Tier B: llmcompressor GPTQ-W4A16 (offline calibration via
#   scripts/quantize_gptq.py; runtime side reads a pre-quantized checkpoint
#   that ships its own compressed-tensors config). AWQ-W4A16 deferred.
# Tier C (GGUF via llama-cpp-python) extras will land when that tier's
# toolkit is confirmed by pre-flight (see docs/stage1_plan.md).
quant = [
    "bitsandbytes>=0.43",
    # llmcompressor PyPI 0.10.0.2 imports TORCH_INIT_FUNCTIONS from
    # transformers.modeling_utils (4.x path) with no fallback. The shim
    # for transformers 5.x (`from transformers.initialization import ...`)
    # only exists on `main`. Pin to git+main until a release ships it.
    "llmcompressor @ git+https://github.com/vllm-project/llm-compressor@main",
    "compressed-tensors>=0.14",
]

[project.scripts]
llm-bench-cc = "llm_bench_cc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bench_cc"]

[tool.ruff]
line-length = 100
target-version = "py310"
