[project]
name = "llm-bench-cc"
version = "0.1.0"
description = "Optimization pipeline for google/gemma-4-E4B-it (image-to-text)"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "torch>=2.4",
    # specific transformers version required for llmcompressor
    "transformers>=4.56.1,<=4.57.6",
    "accelerate>=0.34",
    "Pillow>=10",
    "datasets>=3.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.18",
    "codecarbon>=2.7",
    "rapidfuzz>=3.9",
    "jiwer>=3.0",
    "nltk>=3.9",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Stage 1 Tier A: bitsandbytes int8 / nf4 (runtime-only, no calibration).
# Stage 1 Tier B: GPTQ-W4A16 via llmcompressor + post-install transformers 5.x.
#   llmcompressor is INTENTIONALLY NOT listed here — its setup.py pins
#   transformers <= 4.57.6 while runtime needs >= 5.5 for Gemma 4, and
#   resolving the conflict inside a single pip transaction is fragile.
#   Install it manually after the project is in place; see scripts/quantize_gptq.py
#   docstring for the exact commands. compressed-tensors is also installed
#   transitively by llmcompressor's manual install.
# Tier C (GGUF via llama-cpp-python) extras will land when that tier's
# toolkit is confirmed by pre-flight (see docs/stage1_plan.md).
quant = [
    "bitsandbytes>=0.43",
]

[project.scripts]
llm-bench-cc = "llm_bench_cc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bench_cc"]

[tool.ruff]
line-length = 100
target-version = "py310"
